melhora na verificação de adms
